<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding"
    tools:context="com.example.hannabotar.inventoryapp.MainActivity">

    <TextView
        android:id="@+id/inventory_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/black"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/inventory_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/order_history_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/black"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/order_history_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/supplier_products_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/black"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/supplier_products_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/editable_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text_size"
        android:textColor="@color/black"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/editable_list_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/grey"/>

</LinearLayout>
